syntax = "proto3";

package calculator;
option go_package = "calculator/calculatorpb";

message Calculator{
    int32 first_num = 1;
    int32 second_num = 2;
}

message CalculatorRequest{
    Calculator calc = 1;
}

message CalculatorResponse{
    int32 result = 1;
}

service CalculatorService{
    rpc Calculator(CalculatorRequest) returns (CalculatorResponse) {};
}